--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Serial Data</title>
+  <title>Data Display</title>
+  <script>
+    function fetchData() {
+      fetch('/data')
+        .then(response => response.text())
+        .then(data => {
+          document.getElementById('data').innerText = data;
+        });
+    }
+
+    setInterval(fetchData, 1000);  // Fetch data every second
+  </script>
 </head>
 <body>
-  <h1>Serial Data</h1>
-  <div id="data-com6"></div>
-
-  <script>
-    const ws = new WebSocket('ws://192.168.43.198:5000');
-
-    ws.onmessage = (event) => {
-      const message = JSON.parse(event.data);
-      if (message.port === 'com6') {
-        document.getElementById('data-com6').textContent = `COM6 Data: ${message.data}`;
-      }
-    };
-
-    ws.onopen = () => {
-      console.log('Connected to WebSocket server');
-    };
-
-    ws.onclose = () => {
-      console.log('Disconnected from WebSocket server');
-    };
-  </script>
+  <h1>Latest Data</h1>
+  <p id="data">No data yet</p>
 </body>
 </html>
